ParseSVGElements.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.0 from ParseSVGElements.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseR -> Rect                              (0)
	%start_parsePo -> Polygon                          (1)
	%start_parsePa -> Path                             (2)
	FloatExp -> '-' FLOAT                              (3)
	FloatExp -> FLOAT                                  (4)
	Point -> FloatExp FloatExp                         (5)
	Point -> FloatExp ',' FloatExp                     (6)
	PointList ->                                       (7)
	PointList -> Point PointList                       (8)
	Sufix -> TransformList Name                        (9)
	Name ->                                            (10)
	Name -> NAME                                       (11)
	SufixS -> ScaleList Name                           (12)
	Transform -> TRANSLATE FloatExp                    (13)
	Transform -> TRANSLATE Point                       (14)
	Transform -> ROTATE FloatExp                       (15)
	Transform -> SCALE FloatExp                        (16)
	Transform -> SKEWX FloatExp                        (17)
	Transform -> SKEWY FloatExp                        (18)
	Transform -> MATRIX FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp   (19)
	TransformList ->                                   (20)
	TransformList -> Transform TransformList           (21)
	ScaleList ->                                       (22)
	ScaleList -> SCALE FloatExp ScaleList              (23)
	Rect -> FloatExp FloatExp SufixS                   (24)
	Polygon -> PointList Sufix                         (25)
	SPath -> M Point PathL                             (26)
	SPath -> m Point PathL                             (27)
	PathL -> h FloatExp PathL                          (28)
	PathL -> H FloatExp PathL                          (29)
	PathL -> v FloatExp PathL                          (30)
	PathL -> V FloatExp PathL                          (31)
	PathL -> l Point PathL                             (32)
	PathL -> L Point PathL                             (33)
	PathL -> Point PathL                               (34)
	PathL -> Z                                         (35)
	Path -> SPath Sufix                                (36)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	m              { Tm }
	M              { TM }
	h              { Th }
	H              { TH }
	v              { Tv }
	V              { TV }
	l              { Tl }
	L              { TL }
	Z              { TZ }
	'-'            { TMinus }
	','            { TComma }
	FLOAT          { TFloat $$ }
	NAME           { TName $$ }
	SCALE          { TScale }
	SKEWX          { TSkewX }
	SKEWY          { TSkewY }
	MATRIX         { TMatrix }
	TRANSLATE      { TTranslate }
	ROTATE         { TRotate }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseR   rule  0
	%start_parsePo  rule  1
	%start_parsePa  rule  2
	FloatExp        rules 3, 4
	Point           rules 5, 6
	PointList       rules 7, 8
	Sufix           rule  9
	Name            rules 10, 11
	SufixS          rule  12
	Transform       rules 13, 14, 15, 16, 17, 18, 19
	TransformList   rules 20, 21
	ScaleList       rules 22, 23
	Rect            rule  24
	Polygon         rule  25
	SPath           rules 26, 27
	PathL           rules 28, 29, 30, 31, 32, 33, 34, 35
	Path            rule  36

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 14
	Rect           goto state 15

State 1


	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13
	NAME           reduce using rule 7
	SCALE          reduce using rule 7
	SKEWX          reduce using rule 7
	SKEWY          reduce using rule 7
	MATRIX         reduce using rule 7
	TRANSLATE      reduce using rule 7
	ROTATE         reduce using rule 7
	%eof           reduce using rule 7

	FloatExp       goto state 9
	Point          goto state 10
	PointList      goto state 11
	Polygon        goto state 12

State 2


	m              shift, and enter state 7
	M              shift, and enter state 8

	SPath          goto state 5
	Path           goto state 6

State 3


	'-'            shift, and enter state 4


State 4

	FloatExp -> '-' . FLOAT                             (rule 3)

	FLOAT          shift, and enter state 32


State 5

	Path -> SPath . Sufix                               (rule 36)

	NAME           reduce using rule 20
	SCALE          shift, and enter state 20
	SKEWX          shift, and enter state 21
	SKEWY          shift, and enter state 22
	MATRIX         shift, and enter state 23
	TRANSLATE      shift, and enter state 24
	ROTATE         shift, and enter state 25
	%eof           reduce using rule 20

	Sufix          goto state 31
	Transform      goto state 18
	TransformList  goto state 19

State 6

	%start_parsePa -> Path .                            (rule 2)

	%eof           accept


State 7

	SPath -> m . Point PathL                            (rule 27)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 30

State 8

	SPath -> M . Point PathL                            (rule 26)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 29

State 9

	Point -> FloatExp . FloatExp                        (rule 5)
	Point -> FloatExp . ',' FloatExp                    (rule 6)

	'-'            shift, and enter state 4
	','            shift, and enter state 28
	FLOAT          shift, and enter state 13

	FloatExp       goto state 27

State 10

	PointList -> Point . PointList                      (rule 8)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13
	NAME           reduce using rule 7
	SCALE          reduce using rule 7
	SKEWX          reduce using rule 7
	SKEWY          reduce using rule 7
	MATRIX         reduce using rule 7
	TRANSLATE      reduce using rule 7
	ROTATE         reduce using rule 7
	%eof           reduce using rule 7

	FloatExp       goto state 9
	Point          goto state 10
	PointList      goto state 26

State 11

	Polygon -> PointList . Sufix                        (rule 25)

	NAME           reduce using rule 20
	SCALE          shift, and enter state 20
	SKEWX          shift, and enter state 21
	SKEWY          shift, and enter state 22
	MATRIX         shift, and enter state 23
	TRANSLATE      shift, and enter state 24
	ROTATE         shift, and enter state 25
	%eof           reduce using rule 20

	Sufix          goto state 17
	Transform      goto state 18
	TransformList  goto state 19

State 12

	%start_parsePo -> Polygon .                         (rule 1)

	%eof           accept


State 13

	FloatExp -> FLOAT .                                 (rule 4)

	h              reduce using rule 4
	H              reduce using rule 4
	v              reduce using rule 4
	V              reduce using rule 4
	l              reduce using rule 4
	L              reduce using rule 4
	Z              reduce using rule 4
	'-'            reduce using rule 4
	','            reduce using rule 4
	FLOAT          reduce using rule 4
	NAME           reduce using rule 4
	SCALE          reduce using rule 4
	SKEWX          reduce using rule 4
	SKEWY          reduce using rule 4
	MATRIX         reduce using rule 4
	TRANSLATE      reduce using rule 4
	ROTATE         reduce using rule 4
	%eof           reduce using rule 4


State 14

	Rect -> FloatExp . FloatExp SufixS                  (rule 24)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 16

State 15

	%start_parseR -> Rect .                             (rule 0)

	%eof           accept


State 16

	Rect -> FloatExp FloatExp . SufixS                  (rule 24)

	NAME           reduce using rule 22
	SCALE          shift, and enter state 56
	%eof           reduce using rule 22

	SufixS         goto state 54
	ScaleList      goto state 55

State 17

	Polygon -> PointList Sufix .                        (rule 25)

	%eof           reduce using rule 25


State 18

	TransformList -> Transform . TransformList          (rule 21)

	NAME           reduce using rule 20
	SCALE          shift, and enter state 20
	SKEWX          shift, and enter state 21
	SKEWY          shift, and enter state 22
	MATRIX         shift, and enter state 23
	TRANSLATE      shift, and enter state 24
	ROTATE         shift, and enter state 25
	%eof           reduce using rule 20

	Transform      goto state 18
	TransformList  goto state 53

State 19

	Sufix -> TransformList . Name                       (rule 9)

	NAME           shift, and enter state 52
	%eof           reduce using rule 10

	Name           goto state 51

State 20

	Transform -> SCALE . FloatExp                       (rule 16)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 50

State 21

	Transform -> SKEWX . FloatExp                       (rule 17)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 49

State 22

	Transform -> SKEWY . FloatExp                       (rule 18)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 48

State 23

	Transform -> MATRIX . FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp    (rule 19)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 47

State 24

	Transform -> TRANSLATE . FloatExp                   (rule 13)
	Transform -> TRANSLATE . Point                      (rule 14)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 45
	Point          goto state 46

State 25

	Transform -> ROTATE . FloatExp                      (rule 15)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 44

State 26

	PointList -> Point PointList .                      (rule 8)

	NAME           reduce using rule 8
	SCALE          reduce using rule 8
	SKEWX          reduce using rule 8
	SKEWY          reduce using rule 8
	MATRIX         reduce using rule 8
	TRANSLATE      reduce using rule 8
	ROTATE         reduce using rule 8
	%eof           reduce using rule 8


State 27

	Point -> FloatExp FloatExp .                        (rule 5)

	h              reduce using rule 5
	H              reduce using rule 5
	v              reduce using rule 5
	V              reduce using rule 5
	l              reduce using rule 5
	L              reduce using rule 5
	Z              reduce using rule 5
	'-'            reduce using rule 5
	FLOAT          reduce using rule 5
	NAME           reduce using rule 5
	SCALE          reduce using rule 5
	SKEWX          reduce using rule 5
	SKEWY          reduce using rule 5
	MATRIX         reduce using rule 5
	TRANSLATE      reduce using rule 5
	ROTATE         reduce using rule 5
	%eof           reduce using rule 5


State 28

	Point -> FloatExp ',' . FloatExp                    (rule 6)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 43

State 29

	SPath -> M Point . PathL                            (rule 26)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 42

State 30

	SPath -> m Point . PathL                            (rule 27)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 34

State 31

	Path -> SPath Sufix .                               (rule 36)

	%eof           reduce using rule 36


State 32

	FloatExp -> '-' FLOAT .                             (rule 3)

	h              reduce using rule 3
	H              reduce using rule 3
	v              reduce using rule 3
	V              reduce using rule 3
	l              reduce using rule 3
	L              reduce using rule 3
	Z              reduce using rule 3
	'-'            reduce using rule 3
	','            reduce using rule 3
	FLOAT          reduce using rule 3
	NAME           reduce using rule 3
	SCALE          reduce using rule 3
	SKEWX          reduce using rule 3
	SKEWY          reduce using rule 3
	MATRIX         reduce using rule 3
	TRANSLATE      reduce using rule 3
	ROTATE         reduce using rule 3
	%eof           reduce using rule 3


State 33

	PathL -> Point . PathL                              (rule 34)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 66

State 34

	SPath -> m Point PathL .                            (rule 27)

	NAME           reduce using rule 27
	SCALE          reduce using rule 27
	SKEWX          reduce using rule 27
	SKEWY          reduce using rule 27
	MATRIX         reduce using rule 27
	TRANSLATE      reduce using rule 27
	ROTATE         reduce using rule 27
	%eof           reduce using rule 27


State 35

	PathL -> h . FloatExp PathL                         (rule 28)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 65

State 36

	PathL -> H . FloatExp PathL                         (rule 29)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 64

State 37

	PathL -> v . FloatExp PathL                         (rule 30)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 63

State 38

	PathL -> V . FloatExp PathL                         (rule 31)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 62

State 39

	PathL -> l . Point PathL                            (rule 32)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 61

State 40

	PathL -> L . Point PathL                            (rule 33)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 60

State 41

	PathL -> Z .                                        (rule 35)

	NAME           reduce using rule 35
	SCALE          reduce using rule 35
	SKEWX          reduce using rule 35
	SKEWY          reduce using rule 35
	MATRIX         reduce using rule 35
	TRANSLATE      reduce using rule 35
	ROTATE         reduce using rule 35
	%eof           reduce using rule 35


State 42

	SPath -> M Point PathL .                            (rule 26)

	NAME           reduce using rule 26
	SCALE          reduce using rule 26
	SKEWX          reduce using rule 26
	SKEWY          reduce using rule 26
	MATRIX         reduce using rule 26
	TRANSLATE      reduce using rule 26
	ROTATE         reduce using rule 26
	%eof           reduce using rule 26


State 43

	Point -> FloatExp ',' FloatExp .                    (rule 6)

	h              reduce using rule 6
	H              reduce using rule 6
	v              reduce using rule 6
	V              reduce using rule 6
	l              reduce using rule 6
	L              reduce using rule 6
	Z              reduce using rule 6
	'-'            reduce using rule 6
	FLOAT          reduce using rule 6
	NAME           reduce using rule 6
	SCALE          reduce using rule 6
	SKEWX          reduce using rule 6
	SKEWY          reduce using rule 6
	MATRIX         reduce using rule 6
	TRANSLATE      reduce using rule 6
	ROTATE         reduce using rule 6
	%eof           reduce using rule 6


State 44

	Transform -> ROTATE FloatExp .                      (rule 15)

	NAME           reduce using rule 15
	SCALE          reduce using rule 15
	SKEWX          reduce using rule 15
	SKEWY          reduce using rule 15
	MATRIX         reduce using rule 15
	TRANSLATE      reduce using rule 15
	ROTATE         reduce using rule 15
	%eof           reduce using rule 15


State 45

	Point -> FloatExp . FloatExp                        (rule 5)
	Point -> FloatExp . ',' FloatExp                    (rule 6)
	Transform -> TRANSLATE FloatExp .                   (rule 13)

	'-'            shift, and enter state 4
	','            shift, and enter state 28
	FLOAT          shift, and enter state 13
	NAME           reduce using rule 13
	SCALE          reduce using rule 13
	SKEWX          reduce using rule 13
	SKEWY          reduce using rule 13
	MATRIX         reduce using rule 13
	TRANSLATE      reduce using rule 13
	ROTATE         reduce using rule 13
	%eof           reduce using rule 13

	FloatExp       goto state 27

State 46

	Transform -> TRANSLATE Point .                      (rule 14)

	NAME           reduce using rule 14
	SCALE          reduce using rule 14
	SKEWX          reduce using rule 14
	SKEWY          reduce using rule 14
	MATRIX         reduce using rule 14
	TRANSLATE      reduce using rule 14
	ROTATE         reduce using rule 14
	%eof           reduce using rule 14


State 47

	Transform -> MATRIX FloatExp . ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp    (rule 19)

	','            shift, and enter state 59


State 48

	Transform -> SKEWY FloatExp .                       (rule 18)

	NAME           reduce using rule 18
	SCALE          reduce using rule 18
	SKEWX          reduce using rule 18
	SKEWY          reduce using rule 18
	MATRIX         reduce using rule 18
	TRANSLATE      reduce using rule 18
	ROTATE         reduce using rule 18
	%eof           reduce using rule 18


State 49

	Transform -> SKEWX FloatExp .                       (rule 17)

	NAME           reduce using rule 17
	SCALE          reduce using rule 17
	SKEWX          reduce using rule 17
	SKEWY          reduce using rule 17
	MATRIX         reduce using rule 17
	TRANSLATE      reduce using rule 17
	ROTATE         reduce using rule 17
	%eof           reduce using rule 17


State 50

	Transform -> SCALE FloatExp .                       (rule 16)

	NAME           reduce using rule 16
	SCALE          reduce using rule 16
	SKEWX          reduce using rule 16
	SKEWY          reduce using rule 16
	MATRIX         reduce using rule 16
	TRANSLATE      reduce using rule 16
	ROTATE         reduce using rule 16
	%eof           reduce using rule 16


State 51

	Sufix -> TransformList Name .                       (rule 9)

	%eof           reduce using rule 9


State 52

	Name -> NAME .                                      (rule 11)

	%eof           reduce using rule 11


State 53

	TransformList -> Transform TransformList .          (rule 21)

	NAME           reduce using rule 21
	%eof           reduce using rule 21


State 54

	Rect -> FloatExp FloatExp SufixS .                  (rule 24)

	%eof           reduce using rule 24


State 55

	SufixS -> ScaleList . Name                          (rule 12)

	NAME           shift, and enter state 52
	%eof           reduce using rule 10

	Name           goto state 58

State 56

	ScaleList -> SCALE . FloatExp ScaleList             (rule 23)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 57

State 57

	ScaleList -> SCALE FloatExp . ScaleList             (rule 23)

	NAME           reduce using rule 22
	SCALE          shift, and enter state 56
	%eof           reduce using rule 22

	ScaleList      goto state 74

State 58

	SufixS -> ScaleList Name .                          (rule 12)

	%eof           reduce using rule 12


State 59

	Transform -> MATRIX FloatExp ',' . FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp    (rule 19)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 73

State 60

	PathL -> L Point . PathL                            (rule 33)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 72

State 61

	PathL -> l Point . PathL                            (rule 32)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 71

State 62

	PathL -> V FloatExp . PathL                         (rule 31)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 70

State 63

	PathL -> v FloatExp . PathL                         (rule 30)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 69

State 64

	PathL -> H FloatExp . PathL                         (rule 29)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 68

State 65

	PathL -> h FloatExp . PathL                         (rule 28)

	h              shift, and enter state 35
	H              shift, and enter state 36
	v              shift, and enter state 37
	V              shift, and enter state 38
	l              shift, and enter state 39
	L              shift, and enter state 40
	Z              shift, and enter state 41
	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 9
	Point          goto state 33
	PathL          goto state 67

State 66

	PathL -> Point PathL .                              (rule 34)

	NAME           reduce using rule 34
	SCALE          reduce using rule 34
	SKEWX          reduce using rule 34
	SKEWY          reduce using rule 34
	MATRIX         reduce using rule 34
	TRANSLATE      reduce using rule 34
	ROTATE         reduce using rule 34
	%eof           reduce using rule 34


State 67

	PathL -> h FloatExp PathL .                         (rule 28)

	NAME           reduce using rule 28
	SCALE          reduce using rule 28
	SKEWX          reduce using rule 28
	SKEWY          reduce using rule 28
	MATRIX         reduce using rule 28
	TRANSLATE      reduce using rule 28
	ROTATE         reduce using rule 28
	%eof           reduce using rule 28


State 68

	PathL -> H FloatExp PathL .                         (rule 29)

	NAME           reduce using rule 29
	SCALE          reduce using rule 29
	SKEWX          reduce using rule 29
	SKEWY          reduce using rule 29
	MATRIX         reduce using rule 29
	TRANSLATE      reduce using rule 29
	ROTATE         reduce using rule 29
	%eof           reduce using rule 29


State 69

	PathL -> v FloatExp PathL .                         (rule 30)

	NAME           reduce using rule 30
	SCALE          reduce using rule 30
	SKEWX          reduce using rule 30
	SKEWY          reduce using rule 30
	MATRIX         reduce using rule 30
	TRANSLATE      reduce using rule 30
	ROTATE         reduce using rule 30
	%eof           reduce using rule 30


State 70

	PathL -> V FloatExp PathL .                         (rule 31)

	NAME           reduce using rule 31
	SCALE          reduce using rule 31
	SKEWX          reduce using rule 31
	SKEWY          reduce using rule 31
	MATRIX         reduce using rule 31
	TRANSLATE      reduce using rule 31
	ROTATE         reduce using rule 31
	%eof           reduce using rule 31


State 71

	PathL -> l Point PathL .                            (rule 32)

	NAME           reduce using rule 32
	SCALE          reduce using rule 32
	SKEWX          reduce using rule 32
	SKEWY          reduce using rule 32
	MATRIX         reduce using rule 32
	TRANSLATE      reduce using rule 32
	ROTATE         reduce using rule 32
	%eof           reduce using rule 32


State 72

	PathL -> L Point PathL .                            (rule 33)

	NAME           reduce using rule 33
	SCALE          reduce using rule 33
	SKEWX          reduce using rule 33
	SKEWY          reduce using rule 33
	MATRIX         reduce using rule 33
	TRANSLATE      reduce using rule 33
	ROTATE         reduce using rule 33
	%eof           reduce using rule 33


State 73

	Transform -> MATRIX FloatExp ',' FloatExp . ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp    (rule 19)

	','            shift, and enter state 75


State 74

	ScaleList -> SCALE FloatExp ScaleList .             (rule 23)

	NAME           reduce using rule 23
	%eof           reduce using rule 23


State 75

	Transform -> MATRIX FloatExp ',' FloatExp ',' . FloatExp ',' FloatExp ',' FloatExp ',' FloatExp    (rule 19)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 76

State 76

	Transform -> MATRIX FloatExp ',' FloatExp ',' FloatExp . ',' FloatExp ',' FloatExp ',' FloatExp    (rule 19)

	','            shift, and enter state 77


State 77

	Transform -> MATRIX FloatExp ',' FloatExp ',' FloatExp ',' . FloatExp ',' FloatExp ',' FloatExp    (rule 19)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 78

State 78

	Transform -> MATRIX FloatExp ',' FloatExp ',' FloatExp ',' FloatExp . ',' FloatExp ',' FloatExp    (rule 19)

	','            shift, and enter state 79


State 79

	Transform -> MATRIX FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' . FloatExp ',' FloatExp    (rule 19)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 80

State 80

	Transform -> MATRIX FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp . ',' FloatExp    (rule 19)

	','            shift, and enter state 81


State 81

	Transform -> MATRIX FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' . FloatExp    (rule 19)

	'-'            shift, and enter state 4
	FLOAT          shift, and enter state 13

	FloatExp       goto state 82

State 82

	Transform -> MATRIX FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp ',' FloatExp .    (rule 19)

	NAME           reduce using rule 19
	SCALE          reduce using rule 19
	SKEWX          reduce using rule 19
	SKEWY          reduce using rule 19
	MATRIX         reduce using rule 19
	TRANSLATE      reduce using rule 19
	ROTATE         reduce using rule 19
	%eof           reduce using rule 19


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 37
Number of terminals: 19
Number of non-terminals: 17
Number of states: 83
